--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -23,8 +23,8 @@ jobs:
 
       - name: 📝 Create .env file
         run: |
-          echo "VITE_SUPABASE_URL=${{ secrets.VITE_SUPABASE_URL }}" > .env
-          echo "VITE_SUPABASE_ANON_KEY=${{ secrets.VITE_SUPABASE_ANON_KEY }}" >> .env
+          echo "VITE_SUPABASE_URL=https://eviukbluwrwcblwhkzwz.supabase.co" > .env
+          echo "VITE_SUPABASE_ANON_KEY=sb_publishable_5FFYs0bPMCjQZTawObPk2A_lK5jmGJY" >> .env
 
       - name: 🏗️ Build Project
         run: npm run build
