--- a/package.json
+++ b/package.json
@@ -9,20 +9,22 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@react-google-maps/api": "^2.20.8",
     "@supabase/supabase-js": "^2.95.3",
+    "@types/leaflet": "1.9.21",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
+    "leaflet": "1.9.4",
     "lucide-react": "0.460.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-leaflet": "4.2.1",
     "recharts": "2.13.0",
     "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
-    "@types/react": "^19.2.14",
-    "@types/react-dom": "^19.2.3",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
     "vite": "^6.2.0"
