fix: forçar instalação de dependências de mapa e atualizar versões para resolver erro de build no CI

--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -19,7 +19,9 @@ jobs:
           node-version: '20'
 
       - name: 🔨 Install Dependencies
-        run: npm install --legacy-peer-deps
+        run: |
+          npm install --force --legacy-peer-deps
+          npm list react-leaflet leaflet
 
       - name: 📝 Create .env file
         run: |
