--- a/package.json
+++ b/package.json
@@ -13,11 +13,11 @@
     "@types/leaflet": "1.9.21",
     "jspdf": "^4.1.0",
     "jspdf-autotable": "^5.0.7",
-    "leaflet": "1.9.4",
+    "leaflet": "^1.9.4",
     "lucide-react": "0.460.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-leaflet": "4.2.1",
+    "react-leaflet": "^4.2.1",
     "recharts": "2.13.0",
     "xlsx": "^0.18.5"
   },
