fix: padronizar nome do projeto e otimizar resolução de módulos no vite.config.ts

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "guepardo-entregador---lojista",
+  "name": "guepardo-lojista",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
